--- a/notes.html
+++ b/notes.html
@@ -36,6 +36,13 @@
                     <b>19/10/2025</b> ໄປກິນພິດຊ່າເຕົາຟືນນຳກັນ ແລະ ເປັນມື້ທີ່ເຂົາໃຈຟູມາກກກ ເພາະມີຮູບຄູ່ຮູບແລກນຳກັນ ເຖິງຈະເປັນຮູບທີ່ບໍ່ແຈ້ງກາຕາມ<br>
                     <b>02/11/2025</b> ເປັນມື້ທີ່ເຮົາສອງຄົນຕົກລົງເປັນແຟນກັນ<br>
                     <b>05/11/2025</b> ເປັນມື້ທີ່ເຮົາໄດ້ໄປທ່ຽວນຳກັນ ມີນ້ອງສາວຂອງຊັນນີ້ ກັບໝູ່ອີກຜູ້ໜຶ່ງ ແລະ ເປັນມື້ທີ່... 💖<br>
+                    <b>08/11/2025</b> ພາແຟນໄປເຈີໝູ່ ມື້ວັນເກີດໝູ່ລະພາກັນຫຼົງທາງຊອກທາງໄປເຮືອນໝູ່ບໍ່ເຫັນ<br>
+                    <b>09/11/2025</b> ຊ່ວງແລງພາກັນໄປກິນຕຳຢູ່ແຖວໄຟແດງທາດຫຼວງກັບນ້ອງສາວນຳ<br>
+                    <b>11/11/2025</b> ມື້ນິເລກສວຍ ຄິດຮອດແຟນແຮງເລີຍຊວນໄປກິນຕຳອີກມື້ ເຫັນໜ້າກັນໜ້ອຍຫນຶ່ງກາຍັງດີ ແລ້ວກາໃຫ້ເສື້ອຄູ່ໄປນຳ 💖<br>
+                    <b>15/11/2025</b> ບໍ່ເຫັນກັນ 3 ມື້ ຄິດຮອດແຮງ ແຕ່ມື້ນິກາໄດ້ໄປທ່ຽວນຳກັນ ໄປສວນໝູ່ຢູ່ສັງທອງ ພາແຟນກັບນ້ອງໄປພັກຜ່ອນ ເພາະທິດນີ້ວຽກແຟນຫຼາຍແຮງ ຕ້ອງເຕີມພະລັງ💖<br>
+                    <!-- <b>05/11/2025</b> ເປັນມື້ທີ່ເຮົາໄດ້ໄປທ່ຽວນຳກັນ ມີນ້ອງສາວຂອງຊັນນີ້ ກັບໝູ່ອີກຜູ້ໜຶ່ງ ແລະ ເປັນມື້ທີ່... 💖<br>
+                    <b>05/11/2025</b> ເປັນມື້ທີ່ເຮົາໄດ້ໄປທ່ຽວນຳກັນ ມີນ້ອງສາວຂອງຊັນນີ້ ກັບໝູ່ອີກຜູ້ໜຶ່ງ ແລະ ເປັນມື້ທີ່... 💖<br>
+                    <b>05/11/2025</b> ເປັນມື້ທີ່ເຮົາໄດ້ໄປທ່ຽວນຳກັນ ມີນ້ອງສາວຂອງຊັນນີ້ ກັບໝູ່ອີກຜູ້ໜຶ່ງ ແລະ ເປັນມື້ທີ່... 💖<br> -->
                 </p>
             </div>
             </div>
