--- a/cake.html
+++ b/cake.html
@@ -18,7 +18,7 @@
          <div class="cake-container" style="margin-top: 40px;">
             <img class="cake-img" src="img/cake.png" alt="ຮູບເຄັກວັນເກີດ" >
             
-            <div class="candle" id="candle" style="margin-top: -227px;">
+            <div class="candle" id="candle">
                 <div class="flame" id="flame" onclick="blowOutCandle()"></div>
                 <div class="smoke hidden" id="smoke">💨</div>
             </div>
