--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>🔐 ລະຫັດລັບສຳລັບຄົນພິເສດເທົ່ານັ້ນ 🔑</h1>
-        <p style="font-size: 1.2em; color: #ff69b4;">ປ້ອນລະຫັດລັບເພື່ອປົດລ໋ອກຄວາມໃນໃຈທັງໝົດ</p>
+        <p style="font-size: 1.2em; color: #ff69b4;">ປ້ອນລະຫັດລັບເພື່ອປົດລ໋ອກເລີຍຈາາາ</p>
         
         <div class="lock-container" style="margin-top: 50px;">
             <input type="text" id="password-input" placeholder="ປ້ອນລະຫັດບ່ອນນີ້" 
