--- a/notes.html
+++ b/notes.html
@@ -41,8 +41,8 @@
                     <b>11/11/2025</b> ມື້ນິເລກສວຍ ຄິດຮອດແຟນແຮງເລີຍຊວນໄປກິນຕຳອີກມື້ ເຫັນໜ້າກັນໜ້ອຍຫນຶ່ງກາຍັງດີ ແລ້ວກາໃຫ້ເສື້ອຄູ່ໄປນຳ 💖<br>
                     <b>15/11/2025</b> ບໍ່ເຫັນກັນ 3 ມື້ ຄິດຮອດແຮງ ແຕ່ມື້ນິກາໄດ້ໄປທ່ຽວນຳກັນ ໄປສວນໝູ່ຢູ່ສັງທອງ ພາແຟນກັບນ້ອງໄປພັກຜ່ອນ ເພາະທິດນີ້ວຽກແຟນຫຼາຍແຮງ ຕ້ອງເຕີມພະລັງ💖<br>
                     <b>18/11/2025</b> ພາກັນໄປກິນດາດ ອີກແລ້ວ ເພີ່ມຊັ້ນໄຂມັນ<br>
-                    <!-- <b>05/11/2025</b> ເປັນມື້ທີ່ເຮົາໄດ້ໄປທ່ຽວນຳກັນ ມີນ້ອງສາວຂອງຊັນນີ້ ກັບໝູ່ອີກຜູ້ໜຶ່ງ ແລະ ເປັນມື້ທີ່... 💖<br>
-                    <b>05/11/2025</b> ເປັນມື້ທີ່ເຮົາໄດ້ໄປທ່ຽວນຳກັນ ມີນ້ອງສາວຂອງຊັນນີ້ ກັບໝູ່ອີກຜູ້ໜຶ່ງ ແລະ ເປັນມື້ທີ່... 💖<br>` -->
+                    <b>22/11/2025</b> ເຫງົາ ພາກັນໄປກິນຈຸ່ມນຳກັນ ເບຍເຢັນໆ ບັນຍາກາດດີໆ ແຮັບປີ້ສຸດ 💖<br>
+                    <b>25/11/2025</b> ອ້າຍນ່ອງມາແຕ່ຫຼັກ 20 ພາກັນໄປຮ້ານງົວປິ່ນ ລະກາໄດ້ໄປເຈີແຟນອີກ<br>`
                 </p>
             </div>
             </div>
