--- a/photos.html
+++ b/photos.html
@@ -21,6 +21,7 @@
             <div class="photo-item"><img src="img/04.jpg" alt="ຮຸບທີ 4"></div>
             <div class="photo-item"><img src="img/05.jpg" alt="ຮຸບທີ 5"></div>
             <div class="photo-item"><img src="img/06.jpg" alt="ຮຸບທີ 6"></div>
+            <div class="photo-item"><img src="img/07.jpg" alt="ຮຸບທີ 7"></div>
         </div>
         
         <a href="notes.html" class="nav-button">ໜ້າຕໍ່ໄປ (ຂໍ້ຄວາມຈາກໃຈ)</a>
