--- a/notes.html
+++ b/notes.html
@@ -19,7 +19,7 @@
                 <h3>ສ່ວນທີ 1: ຄວາມຮູ້ສຶກ</h3>
                 <p> ຮູ້ສຶກຢາກເຂົ້າຫາຊັນຕັ້ງແຕ່ທີ່ເຫັນເຟສບຸກແນະນຳຂຶ້ນມາແລ້ວ ເປັນຜູ້ຍິງທີ່ສວຍແຮງໃນສາຍຕາເຂົາ ມີຄວາມເກັ່ງໃນຫຼາຍໆ ດ້ານ ທັງເລື່ອງແຕ້ມຮູບ ເຮັດອາຫານຂາຍອອນລາຍ ແລະ ຍັງມີອີກຫຼາຍໆ ອັນທີ່ເຮັດເພື່ອຫາເງິນ ເຊິ່ງເຂົາເປັນຄົນທີ່ມັກຜູ້ຍິງເກັ່ງເປັນທຸນເດີມຢູ່ແລ້ວ
                     <br><br>ຕໍ່ມາພໍໄດ້ມາຮູ້ຈັກກັນແລ້ວ ກາເຮັດໃຫ້ຮູ້ວ່າຊັນນີ້ເປັນຄົນທີ່ໜ້າຮັກແຮງ ມີຄວາມມັກໃນສິ່ງທີ່ໜ້າຮັກມຸ້ງມິ້ງ ບາງມຸມກາເຜີຄິດວ່າຊັນນີ້ເປັນລຸ້ນນ້ອງທີ່ຢາກປົກປ້ອງ
-                    ແລະ ພໍໄດ້ມາເປັນແຟນກັນ ຮູ້ສຶກວ່າໂຕເອງໂຊກດີແຮງທີ່ໄດ້ຮັກກັບຊັນນີ້<br><br> 13 ປີທີ່ໂສດມາ ຊັນນີ້ເປັນຄົນທີ່ເຮັດໃຫ້ເຂົາຮູ້ສຶກວ່າເປັນການຖ້າທີ່ຄຸ້ມຄ່າທີ່ໄດ້ມາເຈີເພິ່ນ
+                    ແລະ ພໍໄດ້ມາເປັນແຟນກັນ ຮູ້ສຶກວ່າໂຕເອງໂຊກດີແຮງທີ່ໄດ້ຮັກກັບຊັນນີ້<br><br> 16 ປີທີ່ໂສດມາ ຊັນນີ້ເປັນຄົນທີ່ເຮັດໃຫ້ເຂົາຮູ້ສຶກວ່າເປັນການຖ້າທີ່ຄຸ້ມຄ່າທີ່ໄດ້ມາເຈີເພິ່ນ
                     ອາດເບິ່ງຄືເປັນຊ່ວງໂປຣທີ່ເປັນແຟນກັນໃໝ່ໆ ແຕ່ຢາກໃຫ້ຊັນນີ້ຮູ້ໄວ້ວ່າ ເຂົາຈະສະເໝີຕົ້ນສະເໝີປາຍແບບນີ້ໄປຕະຫຼອດເລຍນາາາ ຈຸ໊ບໆໆ
                 </p>
             </div>
@@ -42,7 +42,9 @@
                     <b>15/11/2025</b> ບໍ່ເຫັນກັນ 3 ມື້ ຄິດຮອດແຮງ ແຕ່ມື້ນິກາໄດ້ໄປທ່ຽວນຳກັນ ໄປສວນໝູ່ຢູ່ສັງທອງ ພາແຟນກັບນ້ອງໄປພັກຜ່ອນ ເພາະທິດນີ້ວຽກແຟນຫຼາຍແຮງ ຕ້ອງເຕີມພະລັງ💖<br>
                     <b>18/11/2025</b> ພາກັນໄປກິນດາດ ອີກແລ້ວ ເພີ່ມຊັ້ນໄຂມັນ<br>
                     <b>22/11/2025</b> ເຫງົາ ພາກັນໄປກິນຈຸ່ມນຳກັນ ເບຍເຢັນໆ ບັນຍາກາດດີໆ ແຮັບປີ້ສຸດ 💖<br>
-                    <b>25/11/2025</b> ອ້າຍນ່ອງມາແຕ່ຫຼັກ 20 ພາກັນໄປຮ້ານງົວປິ່ນ ລະກາໄດ້ໄປເຈີແຟນອີກ<br>`
+                    <b>25/11/2025</b> ອ້າຍນ່ອງມາແຕ່ຫຼັກ 20 ພາກັນໄປຮ້ານງົວປິ່ນ ລະກາໄດ້ໄປເຈີແຟນອີກ<br>
+                    <b>26/11/2025</b> ພາກັນໄປກິນຍຳຈີນ ລະຄືອາກາດເຢັນມາກກກ ຈົນສັ່ນ<br>`
+
                 </p>
             </div>
             </div>
