--- a/notes.html
+++ b/notes.html
@@ -35,7 +35,7 @@
                     <b>12/10/2025</b> ເຮົາໄປຄາເຟນຳກັນ ຮ້ານ Coff & Farm ບັນຍາກາດດີແຮງ ຮູ້ສຶກຮິວໃຈສຸດໆ ແລະ ເປັນມື້ແລກທີ່ຊັນນີ້ໄດ້ຮູ້ວ່າເຂົາຖ່າຍຮູບບໍ່ງາມເລີຍ<br>
                     <b>19/10/2025</b> ໄປກິນພິດຊ່າເຕົາຟືນນຳກັນ ແລະ ເປັນມື້ທີ່ເຂົາໃຈຟູມາກກກ ເພາະມີຮູບຄູ່ຮູບແລກນຳກັນ ເຖິງຈະເປັນຮູບທີ່ບໍ່ແຈ້ງກາຕາມ<br>
                     <b>02/11/2025</b> ເປັນມື້ທີ່ເຮົາສອງຄົນຕົກລົງເປັນແຟນກັນ<br>
-                    <b>05/11/2025</b> ເປັນມື້ທີ່ເຮົາໄດ້ໄປທ່ຽວນຳກັນ ມີນ້ອງສາວຂອງຊັນນີ້ ກັບໝູ່ອີກຜູ້ໜຶ່ງ ແລະ ເປັນມື້ທີ່... 💖<br>
+                    <b>05/11/2025</b> ເປັນມື້ທີ່ເຮົາໄດ້ໄປທ່ຽວນຳກັນ ທັງໄປກິນເຂົ້າປຸ້ນ ແລະ ແຟນຍັງພາໄປເຮັດບຸນນຳ ມີນ້ອງສາວຂອງຊັນນີ້ ກັບຈອນນີ້ໄປນຳກັນ 💖<br>
                     <b>08/11/2025</b> ພາແຟນໄປເຈີໝູ່ ມື້ວັນເກີດໝູ່ລະພາກັນຫຼົງທາງຊອກທາງໄປເຮືອນໝູ່ບໍ່ເຫັນ<br>
                     <b>09/11/2025</b> ຊ່ວງແລງພາກັນໄປກິນຕຳຢູ່ແຖວໄຟແດງທາດຫຼວງກັບນ້ອງສາວນຳ<br>
                     <b>11/11/2025</b> ມື້ນິເລກສວຍ ຄິດຮອດແຟນແຮງເລີຍຊວນໄປກິນຕຳອີກມື້ ເຫັນໜ້າກັນໜ້ອຍຫນຶ່ງກາຍັງດີ ແລ້ວກາໃຫ້ເສື້ອຄູ່ໄປນຳ 💖<br>
@@ -43,7 +43,9 @@
                     <b>18/11/2025</b> ພາກັນໄປກິນດາດ ອີກແລ້ວ ເພີ່ມຊັ້ນໄຂມັນ<br>
                     <b>22/11/2025</b> ເຫງົາ ພາກັນໄປກິນຈຸ່ມນຳກັນ ເບຍເຢັນໆ ບັນຍາກາດດີໆ ແຮັບປີ້ສຸດ 💖<br>
                     <b>25/11/2025</b> ອ້າຍນ່ອງມາແຕ່ຫຼັກ 20 ພາກັນໄປຮ້ານງົວປິ່ນ ລະກາໄດ້ໄປເຈີແຟນອີກ<br>
-                    <b>26/11/2025</b> ພາກັນໄປກິນຍຳຈີນ ລະຄືອາກາດເຢັນມາກກກ ຈົນສັ່ນ<br>`
+                    <b>26/11/2025</b> ພາກັນໄປກິນຍຳຈີນ ລະຄືອາກາດເຢັນມາກກກ ຈົນສັ່ນ<br>
+                    <b>29/11/2025</b> ນັດກັນອອກໄປເພີ່ມນ້ຳໜັກອີກແລ້ວ ຢູ່ຮ້ານ K Butcher ອາກາດດີແຮງ ວິວແຄມຂອງຍາມຄ່ຳຄືສວຍ<br>
+                    <b>01/12/2025</b> ທ້າຍມື້ວັນທີ 1 ຂຶ້ນວັນທີ 2 ຂອງເດືອນ 12 ຂໍ Surprise ວັນເກີດແຟນຄົບຮອບອາຍຸ 29 ປີ 💖<br>
 
                 </p>
             </div>
